--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,10 @@
     "skipLibCheck": true,
     "allowJs": true,
     "noUnusedLocals": false,
-    "strictNullChecks": false
+    "strictNullChecks": false,
+    "types": [
+      "./src/types/collaborative.ts",
+      "./src/integrations/supabase/types.ts"
+    ]
   }
 }
