--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,8 @@
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
   "framework": "vite",
-  "installCommand": "npm install"
+  "installCommand": "npm install",
+  "typescript": {
+    "ignoreBuildErrors": true
+  }
 }
