--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,5 @@
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
   "framework": "vite",
-  "installCommand": "npm install",
-  "typescript": {
-    "ignoreBuildErrors": true
-  }
+  "installCommand": "npm install"
 }
